Fix answer button overlap for small screens

--- a/ukahoot/src/interface/SiteInterface/siteInterface.css
+++ b/ukahoot/src/interface/SiteInterface/siteInterface.css
@@ -141,7 +141,7 @@ button:hover {
 	font-family: 'Ubuntu';
 	color: lime;
 	width: 47%;
-	height: 47%;
+	height: 46%;
 	opacity: 0.7;
 	background-color: black;
 	cursor: pointer;
